<resources>
    <string name="app_name">OMDB Viewer</string>

    <string name="text_title">App that paginates!</string>
    <string name="text_description">This app is a smooth paginating example...</string>
    <string name="imdb_poster">IMDB poster</string>
    <string name="search_open_movie_database">Search Open Movie Database</string>
    <string name="no_results_found">No results found!</string>
    <string name="poster_big">Poster big</string>
    <string name="directed_by">Directed by</string>
    <string name="written_by">Written by</string>
    <string name="starring">Starring</string>
    <string name="not_available">N/A</string>
</resources>